--- a/index.html
+++ b/index.html
@@ -306,34 +306,8 @@
               src="assets/ChinaFood/veg-fried-rice.jpg"
               alt="veg-fried-rice"
             />
-            <p id="item-name">Vegetable Fried Rice</p>
+            <p id="item-name">Veg-Fried Rice</p>
             <p id="item-price">Price : Rp. 23.000</p>
-          </div>
-
-          <div id="item-card">
-            <div id="card-top">
-              <i class="fa fa-star" id="rating">$.3</i>
-              <i class="fa fa-heart-o add-to-cart"></i>
-            </div>
-            <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
-            />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
-          </div>
-
-          <div id="item-card">
-            <div id="card-top">
-              <i class="fa fa-star" id="rating">$.3</i>
-              <i class="fa fa-heart-o add-to-cart"></i>
-            </div>
-            <img
-              src="assets/ChinaFood/chowmin.jpg"
-              alt="Chowmin"
-            />
-            <p id="item-name">Chowmin</p>
-            <p id="item-price">Price : Rp. 27.000</p>
           </div>
 
 
@@ -359,10 +333,34 @@
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Vegetable/vegetable-pakora.jpg"
-                alt="VegetablePakora"
+                src="assets/Vegetable/navratan-korma_-vegetable.png"
+                alt="Navratan Korma"
               />
-              <p id="item-name">Vegetable Pakora</p>
+              <p id="item-name">Navratan Korma</p>
+              <p id="item-price">Price : Rp. 28.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Vegetable/VEG-JALFREZI.jpg"
+                alt="Jalfrezi"
+              />
+              <p id="item-name">Jalfrezi</p>
+              <p id="item-price">Price : Rp. 26.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/Vegetable/vegetable-curry.jpg"
+                alt="Vegetable Curry"
+              />
+              <p id="item-name">Vegetable Curry</p>
               <p id="item-price">Price : Rp. 27.000</p>
             </div>
             <div id="item-card">
@@ -371,35 +369,11 @@
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
-                src="assets/Vegetable/vegetable-pakora.jpg"
-                alt="VegetablePakora"
+                src="assets/Vegetable/vegetable-masala.jpg"
+                alt="Vegetable Masala"
               />
-              <p id="item-name">Vegetable Pakora</p>
-              <p id="item-price">Price : Rp. 27.000</p>
-            </div>
-            <div id="item-card">
-              <div id="card-top">
-                <i class="fa fa-star" id="rating">$.3</i>
-                <i class="fa fa-heart-o add-to-cart"></i>
-              </div>
-              <img
-                src="assets/Vegetable/vegetable-pakora.jpg"
-                alt="VegetablePakora"
-              />
-              <p id="item-name">Vegetable Pakora</p>
-              <p id="item-price">Price : Rp. 27.000</p>
-            </div>
-            <div id="item-card">
-              <div id="card-top">
-                <i class="fa fa-star" id="rating">$.3</i>
-                <i class="fa fa-heart-o add-to-cart"></i>
-              </div>
-              <img
-                src="assets/Vegetable/vegetable-pakora.jpg"
-                alt="VegetablePakora"
-              />
-              <p id="item-name">Vegetable Pakora</p>
-              <p id="item-price">Price : Rp. 27.000</p>
+              <p id="item-name">Vegetable Masala</p>
+              <p id="item-price">Price : Rp. 29.000</p>
             </div>
           </div>
 
@@ -415,7 +389,91 @@
                 alt="BeefYakiniku"
               />
               <p id="item-name">Beef Yakiniku</p>
+              <p id="item-price">Price : Rp. 31.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/mochi.jpg"
+                alt="Mochi"
+              />
+              <p id="item-name">Mochi</p>
+              <p id="item-price">Price : Rp. 15.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/okonomiyaki.jpg"
+                alt="okonomiyaki"
+              />
+              <p id="item-name">Okonomiyaki</p>
+              <p id="item-price">Price : Rp. 28.500</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/ramen.jpg"
+                alt="Ramen"
+              />
+              <p id="item-name">Ramen</p>
               <p id="item-price">Price : Rp. 27.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/sashimi.jpg"
+                alt="Sashimi"
+              />
+              <p id="item-name">Sashimi</p>
+              <p id="item-price">Price : Rp. 47.990</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/sushi.jpg"
+                alt="Shushi"
+              />
+              <p id="item-name">Shusi</p>
+              <p id="item-price">Price : Rp. 48.999</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/takoyaki.jpg"
+                alt="Takoyaki"
+              />
+              <p id="item-name">Takoyaki</p>
+              <p id="item-price">Price : Rp. 27.999</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/JapanesseFood/tempura.jpg"
+                alt="Tempura"
+              />
+              <p id="item-name">Tempura</p>
+              <p id="item-price">Price : Rp. 47.999</p>
             </div>
           </div>
 
@@ -427,11 +485,95 @@
                 <i class="fa fa-heart-o add-to-cart"></i>
               </div>
               <img
+                src="assets/KoreanFood/bulgogi.jpg"
+                alt="Bulgogi"
+              />
+              <p id="item-name">Bulgogi</p>
+              <p id="item-price">Price : Rp. 32.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
                 src="assets/KoreanFood/bibimbap.jpg"
                 alt="Bibimbap"
               />
               <p id="item-name">Bibimbap</p>
+              <p id="item-price">Price : Rp. 30.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/KoreanFood/japchae.jpg"
+                alt="Japchae"
+              />
+              <p id="item-name">Japchae</p>
+              <p id="item-price">Price : Rp. 29.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/KoreanFood/Kimbap.jpg"
+                alt="Kimbap"
+              />
+              <p id="item-name">Kimbap</p>
               <p id="item-price">Price : Rp. 27.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/KoreanFood/kimchi.jpg"
+                alt="Kimchi"
+              />
+              <p id="item-name">Kimchi</p>
+              <p id="item-price">Price : Rp. 23.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/KoreanFood/Kimchi_Jjigae.jpg"
+                alt="Kimchi_Jjigae"
+              />
+              <p id="item-name">Kimchi Jjigae</p>
+              <p id="item-price">Price : Rp. 25.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/KoreanFood/Samgyeopsal.jpg"
+                alt="Samgyeopsal"
+              />
+              <p id="item-name">Samgyeopsal</p>
+              <p id="item-price">Price : Rp. 33.000</p>
+            </div>
+            <div id="item-card">
+              <div id="card-top">
+                <i class="fa fa-star" id="rating">$.3</i>
+                <i class="fa fa-heart-o add-to-cart"></i>
+              </div>
+              <img
+                src="assets/KoreanFood/ttekbokki.jpg"
+                alt="ttekbokki"
+              />
+              <p id="item-name">Ttekbokki</p>
+              <p id="item-price">Price : Rp. 26.980</p>
             </div>
           </div>
         </div>
